[package]
name = "multifun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2.3", features = ["js"]}
js-sys = "0.3.53"
rand = "0.8.4"
wasm-bindgen = "0.2.76"
yew = "0.18.0"
