[package]
name = "multiplayday"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2.3", features = ["js"]}
js-sys = "0.3.53"
rand = "0.8.4"
serde = "1.0.130"
wasm-bindgen = "0.2.76"
web-sys = { version = "0.3.53", features = ["HtmlAudioElement"] }
yew = "0.18.0"
